# fastapi-review

./: README.md
chico-moedas/: README.md  converter.py  pyproject.toml  routers.py  schemas.py
projects/chico-moedas/: converter.py  main.py  pyproject.toml  routers.py
projects/chico-moedas/app/: converter.py  main.py  routers.py
projects/chico-moedas/tests/: test_converter.py  test_routes.py
projects/usecases-architecture-crud/app/tests/: conftest.py
projects/usecases-architecture-crud/app/tests/usecases/: test_category_use_cases.py
sync-async/: async_await_bob.py
testing-sync-async/: async_await_overview.py
usecases-architecture-crud/: Dockerfile  README.md  pyproject.toml
usecases-architecture-crud/app/: main.py
usecases-architecture-crud/app/db/: connection.py
usecases-architecture-crud/app/use_cases/: category.py
usecases-architecture-crud/migrations/versions/: ab04121c3dc3_add_categories_table.py
xyz/: README.md  USECASES.md  alembic.ini  docker-compose.yml  pyproject.toml
xyz/app/: main.py
xyz/app/db/: base.py  connection.py  models.py
xyz/app/errors/: category.py
xyz/app/routes/: category_routes.py  deps.py
xyz/app/schemas/: category.py
xyz/app/tests/: conftest.py
xyz/app/tests/routes/: test_category_routes.py
xyz/app/tests/schemas/: test_category_schema.py
xyz/app/tests/usecases/: test_category_use_cases.py
xyz/app/use_cases/: category.py
xyz/migrations/: env.py
xyz/migrations/versions/: 4ffbcf60c335_add_categories_table.py  aba0f8acd49d_add_products_table.py
