[tool.poetry]
name = "xyz"
version = "0.1.0"
description = ""
authors = ["Jackson Vieira <jacksonvieiira12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
psycopg-binary = "^3.1.12"
pytest = "^7.4.2"
alembic = "^1.12.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
