[tool.poetry]
name = "chico-moedas"
version = "0.1.0"
description = ""
authors = ["Jackson Vieira <jacksonvieiira12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
aiohttp = "^3.8.6"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
aioresponses = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
